<resources>
    <string name="app_name">" "</string>
    <string name="_0_00">0:00</string>
    <string name="rec_your_voice_for_first_time">REC YOUR VOICE FOR FIRST TIME</string>
    <string name="next">NEXT</string>
    <string name="say_recognigtion_your_nick_name">SAY: \'RECOGNIGTION\' + YOUR USER NAME</string>
    <string name="todo">TODO</string>
    <string name="recognigtion">TODO</string>
    <string name="nick_name">NICK NAME:</string>
    <string name="btnnext">NEXT</string>
    <string name="log_in">LOG-IN</string>
    <string name="rec_your_voice_for_recognigtion">REC YOUR VOICE FOR RECOGNIGTION</string>
    <string name="say_recognigtion_anything">SAY: \'RECOGNIGTION\' + ANYTHING</string>
    <string name="btnnextrec">NEXT</string>
    <string name="password">PASSWORD:</string>
    <string name="sing_up">SING UP</string>
    <string name="register_your_user">REGISTER YOUR USER</string>
    <string name="write_the_name_of_your_user">WRITE THE NAME OF YOUR USER:</string>
    <string name="play_record">PLAY RECORD</string>
    <string name="recognize">RECOGNIZE</string>
    <string name="back_main">BACK MAIN</string>
    <string name="play_audio">PLAY AUDIO</string>
    <string name="stop_audio">STOP AUDIO</string>
    <string name="save">SAVE</string>
    <string name="button">Button</string>
    <string name="welcome_to_recognize">WELCOME TO RECOGNIZE</string>
    <string name="choose_the_option_you_need">CHOOSE THE OPTION YOU NEED</string>
    <string name="developer_adrian_veas_nig">DEVELOPER: ADRIAN VEAS (NIG)</string>
    <string name="thaks_for_use_recognigtion">THAKS FOR USE RECOGNIGTION</string>
    <string name="wait_processing_your_audio">WAIT, PROCESSING YOUR AUDIO</string>
</resources>