<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecognizeActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/txttitulorecognigtion"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ocraext"
        android:text="@string/rec_your_voice_for_recognigtion"

        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/txtdetailfirstrec"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txttitulorecognigtion"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ocraext"
        android:text="@string/say_recognigtion_anything"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="212dp"
        android:layout_below="@id/txttitulorecognigtion"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:drawablePadding="0dp"
        android:onClick="recordAudio"
        android:src="@drawable/iconorec"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/button" />

    <ProgressBar
        android:id="@+id/pbRecognize"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:progress="60"
        android:theme="@style/ProgressBarTheme" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPlayAudio"
        style="@style/GreenBTextGray"
        android:layout_width="117dp"
        android:layout_height="37dp"
        android:layout_below="@id/pbRecognize"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/ocraext"
        android:onClick="playAudio"
        android:text="@string/play_audio"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRecognize"
        style="@style/GrayBTextGreen"
        android:layout_width="117dp"
        android:layout_height="37dp"
        android:layout_below="@id/btnPlayAudio"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="20dp"
        android:background="@color/color1"
        android:fontFamily="@font/ocraext"
        android:onClick="recognize"
        android:text="@string/recognize"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

</RelativeLayout>