<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreaditsActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/txttittlecredits"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/ocraext"

        android:text="@string/thaks_for_use_recognigtion"
        android:textAlignment="center"

        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgnig"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/txttittlecredits"

        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/nig" />

    <TextView
        android:id="@+id/txtdescriptioncredits"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgnig"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/ocraext"

        android:text="@string/developer_adrian_veas_nig"
        android:textAlignment="center"

        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="117dp"
        android:layout_height="37dp"
        android:layout_below="@id/txtdescriptioncredits"
        android:layout_alignParentStart="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="30dp"
        android:background="@color/color1"
        android:backgroundTint="@color/color1"
        android:onClick="backMainCredits"
        android:text="@string/back_main"
        android:fontFamily="@font/ocraext"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
</RelativeLayout>